--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Xin chào</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore alias, consequuntur illo consectetur sed nam sequi mollitia accusantium eaque, consequatur nobis aliquam non obcaecati eveniet, ea incidunt. Saepe, dolore!</p>
 </body>
 </html>
