Thêm thẻ P cho about

--- a/about.html
+++ b/about.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>About pate</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi officia maxime iste quae nemo enim unde eaque assumenda earum libero dolorum, explicabo rem ab incidunt velit vero consequuntur voluptates autem?</p>
 </body>
 </html>
