--- a/Day_01/exercire/index.html
+++ b/Day_01/exercire/index.html
@@ -79,7 +79,8 @@ Cấu trúc lấy ảnh từ thư mục khác -->
         <a href="https://www.google.com.vn/">google</a>
         <a href="https://www.google.com.vn/" target="blank">google</a>
     </button>
-
+    <!-- Hoặc  -->
+    <input type="submit" value="Nút bấm">
 
     <!-- Cấu trúc xuống dòng thì dùng thẻ br -->
     <a href="https://www.google.com.vn/">google</a>
