--- a/Day_03/index.html
+++ b/Day_03/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link rel="stylesheet" href="./style.CSS">
+
 </head>
 <body>
-    <h1>About pate</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi officia maxime iste quae nemo enim unde eaque assumenda earum libero dolorum, explicabo rem ab incidunt velit vero consequuntur voluptates autem?</p>
+    <h1>Xin chào mọi người</h1>
 </body>
 </html>
